--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -392,19 +392,14 @@
         <div class="modal-dialog modal-dialog-centered modal-xl modal-fullscreen-sm-down modal-fullscreen-lg-down">
             <div class="modal-content">
                 <div class="modal-header" style="background-color: #369; color: white">
-                    <h5 class="modal-title" id="staticBackdropLabel">
-                        Department Details
-                    </h5>
-                    <button type="button" class="btn-close text-white btn-close-white" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
+                    <h5 class="modal-title" id="staticBackdropLabel">Department Details</h5>
+                    <button type="button" class="btn-close text-white btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-
-
-                <div class="modal-body">
+                <div class="modal-body d-flex align-items-center justify-content-center">
                     <div class="container-fluid">
                         <div class="row">
 
-                            <div class="card col-10">
+                            <div class="card col-10 align-items-center" >
                                 <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
                                     <!--icon-->
                                     <div class="profile-card-icon">
@@ -412,7 +407,6 @@
                                     </div>
                                     <h4 style="margin-top: 10px">Department Head</h4>
                                     <h5 id="department-head"></h5>
-
                                 </div>
                             </div>
 
